publish: First push with Fox Finance details
generated from commit 902b1a53cff4468a796624f78193408d158767b7

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/watch-token/favicon.ico">
     <script src="/watch-token/assets/js/web3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?forceLang=en&amp;theme=momh&amp;thirdparty=1&amp;always=1&amp;noGeoIp=1&amp;scrolling=1&amp;hideDetailsBtn=1" defer="true"></script>
-    <meta name="description" content="Create a Widget for your ERC20 or BEP20 Token and share it with your users. Add your Token to DApp browsers or MetaMask.">
+    <meta name="description" content="Add FOX Finance to your Metamask wallet.">
     <meta property="twitter:title" content="WatchToken | Create a Widget for your ERC20 or BEP20 Token">
     <meta property="og:title" content="WatchToken | Create a Widget for your ERC20 or BEP20 Token">
     <meta property="twitter:description" content="Create a Widget for your ERC20 or BEP20 Token and share it with your users. Add your Token to DApp browsers or MetaMask.">
@@ -16,29 +16,15 @@
     <meta property="og:url" content="https://vittominacori.github.io/watch-token/">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://vittominacori.github.io/watch-token/assets/images/watch-token.jpg">
+    <meta property="og:image" content="https://foxfinancebsc.github.io/watch-token/assets/images/watch-token.jpg">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="https://vittominacori.github.io/watch-token/assets/images/watch-token.jpg">
+    <meta property="twitter:image" content="https://foxfinancebsc.github.io/watch-token/assets/images/watch-token.jpg">
     
-    <link rel="preload" href="/watch-token/assets/css/0.styles.01ae177c.css" as="style"><link rel="preload" href="/watch-token/assets/js/app.ff9225d3.js" as="script"><link rel="preload" href="/watch-token/assets/js/6.4f088b99.js" as="script"><link rel="preload" href="/watch-token/assets/js/8.15ce64ae.js" as="script"><link rel="prefetch" href="/watch-token/assets/js/10.37bb0929.js"><link rel="prefetch" href="/watch-token/assets/js/11.b6fc7166.js"><link rel="prefetch" href="/watch-token/assets/js/12.32798160.js"><link rel="prefetch" href="/watch-token/assets/js/13.dccf2c50.js"><link rel="prefetch" href="/watch-token/assets/js/14.76501d54.js"><link rel="prefetch" href="/watch-token/assets/js/15.13847515.js"><link rel="prefetch" href="/watch-token/assets/js/2.92bf7d01.js"><link rel="prefetch" href="/watch-token/assets/js/3.4ce93869.js"><link rel="prefetch" href="/watch-token/assets/js/4.8d486535.js"><link rel="prefetch" href="/watch-token/assets/js/5.3d8229f2.js"><link rel="prefetch" href="/watch-token/assets/js/7.9219f4c6.js"><link rel="prefetch" href="/watch-token/assets/js/9.71b3d7a9.js">
-    <link rel="stylesheet" href="/watch-token/assets/css/0.styles.01ae177c.css">
+    <link rel="preload" href="/watch-token/assets/css/0.styles.9a1ef349.css" as="style"><link rel="preload" href="/watch-token/assets/js/app.4e2bbf2b.js" as="script"><link rel="preload" href="/watch-token/assets/js/5.bdb68ffe.js" as="script"><link rel="prefetch" href="/watch-token/assets/js/10.a2cb50e4.js"><link rel="prefetch" href="/watch-token/assets/js/11.cff326a1.js"><link rel="prefetch" href="/watch-token/assets/js/12.8c5bd9a3.js"><link rel="prefetch" href="/watch-token/assets/js/2.50280825.js"><link rel="prefetch" href="/watch-token/assets/js/3.d401623d.js"><link rel="prefetch" href="/watch-token/assets/js/4.438b5fb2.js"><link rel="prefetch" href="/watch-token/assets/js/6.8cfde87f.js"><link rel="prefetch" href="/watch-token/assets/js/7.d5ad1012.js"><link rel="prefetch" href="/watch-token/assets/js/8.1dbc087d.js"><link rel="prefetch" href="/watch-token/assets/js/9.eeefed98.js">
+    <link rel="stylesheet" href="/watch-token/assets/css/0.styles.9a1ef349.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="page-wrapper main-container"><!----> <div class="container"><div class="row p-0 pt-4"><div class="col-lg-8 offset-lg-2"><div class="jumbotron bg-light"><h1 class="display-4">
-        WatchToken
-      </h1><p class="lead">
-        
-      </p>  <hr class="my-4"> <p>Create a Widget for your ERC20 or BEP20 Token. Add your Token to DApp browsers or MetaMask.</p> <a href="/watch-token/create/" target="_self" class="btn mt-2 text-uppercase p-3 btn-info btn-lg">
-        Create ERC20 Widget
-      </a> <a href="/watch-token/create/?network=bsc_mainnet" target="_self" class="btn mt-2 text-uppercase p-3 btn-warning btn-lg">
-        Create BEP20 Widget
-      </a> <a href="/watch-token/page/?hash=0x7b2261646472657373223a22307842356336346337643662333734614437333865333134654161376243433037414563313934423762222c226c6f676f223a2268747470733a2f2f766974746f6d696e61636f72692e6769746875622e696f2f77617463682d746f6b656e2f6173736574732f696d616765732f626173652d746f6b656e2e706e67227d" target="_self" class="btn mt-2 text-uppercase p-3 btn-outline-info btn-lg">
-        Example
-      </a></div></div> <div class="col-lg-8 offset-lg-2"><div class="jumbotron text-light bg-dark"><!----><!----><h4>Want to create your ERC20 or BEP20 Token?</h4> <p>Use ERC20 or BEP20 Token Generator to create your own Token in less than a minute.</p> <a href="https://vittominacori.github.io/erc20-generator/" rel="noopener" target="_blank" class="btn mt-2 text-uppercase p-3 btn-outline-info btn-lg">
-        Create ERC20 Token
-      </a> <a href="https://vittominacori.github.io/bep20-generator/" rel="noopener" target="_blank" class="btn mt-2 text-uppercase p-3 btn-outline-warning btn-lg">
-        Create BEP20 Token
-      </a></div></div></div></div> <!----></div><div class="global-ui"></div></div>
-    <script src="/watch-token/assets/js/app.ff9225d3.js" defer></script><script src="/watch-token/assets/js/6.4f088b99.js" defer></script><script src="/watch-token/assets/js/8.15ce64ae.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="page-wrapper main-container"><!----> <div class="container"><Home></Home></div> <!----></div><div class="global-ui"></div></div>
+    <script src="/watch-token/assets/js/app.4e2bbf2b.js" defer></script><script src="/watch-token/assets/js/5.bdb68ffe.js" defer></script>
   </body>
 </html>
